[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Placeholder2.png" type="Texture" id=1]
[ext_resource path="res://Entities/Scientist/ScientistStateMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Scientist/ScientistOrange/ScientistOrange.gd" type="Script" id=3]
[ext_resource path="res://DebugText.gd" type="Script" id=9]
[ext_resource path="res://Assets/Scientist.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 30 )

[node name="ScientistOrange" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )
state_machine = NodePath("ScientistStateMachine")
graphic = NodePath("Scientist")

[node name="Placeholder2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.482353, 0.823529, 0.866667, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Scientist" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
flip_h = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ScientistInteract" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Collision2" type="CollisionShape2D" parent="ScientistInteract"]
shape = SubResource( 1 )

[node name="ScientistStateMachine" parent="." instance=ExtResource( 2 )]
current_state = NodePath("../../ScientistOrange/ScientistStateMachine/Idle")

[node name="StateDebug" type="Label" parent="."]
margin_left = 32.9633
margin_top = -47.6632
margin_right = 72.9633
margin_bottom = -33.6632
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
property = "../ScientistStateMachine:current_state:name"

[node name="VelocityDebug" type="Label" parent="."]
margin_left = 33.8542
margin_top = -22.718
margin_right = 73.8542
margin_bottom = -8.71796
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
property = "..:velocity"

[node name="InputDebug" type="Label" parent="."]
margin_left = 34.8553
margin_top = 3.97883
margin_right = 74.8553
margin_bottom = 17.9789
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
property = "..:input_flags"
[connection signal="body_entered" from="ScientistInteract" to="." method="_on_ScientistInteract_body_entered"]
[connection signal="body_exited" from="ScientistInteract" to="." method="_on_ScientistInteract_body_exited"]
